Cambiado tipo fecha y como se lee el examen